# cpp_practice

./: .gitignore  README.md
01_typed/: CMakeLists.txt
02_untyped/: CMakeLists.txt  untyped.cpp
03_macro/: CMakeLists.txt  macro.cpp
basics/1_string_test/: CMakeLists.txt  main.cpp
basics/2_enum_ostream/: CMakeLists.txt  main.cpp
basics/3_vector_init/: CMakeLists.txt  main.cpp
basics/4_ref_test/: CMakeLists.txt  main.cpp
basics/5_sub_proc/: CMakeLists.txt  main.cpp
basics/6_set_diff/: CMakeLists.txt  main.cpp
basics/7_regx/: CMakeLists.txt  main.cpp
cv_demo/01_image_show_read/: CMakeLists.txt  im_show_read.cpp
math_demo/: README.md
mlpack_demo/1_linear_regress/: CMakeLists.txt  README.md  conanfile.txt  dataset_2.csv  linear_regress_load_model_and_predict.cpp  linear_regress_training.cpp  linear_regress_training_and_save.cpp  lr.xml  lr2.xml  predictions1.csv
mlpack_demo/2_logistic_regress/: CMakeLists.txt  README.md  cls_split_data.cc  cls_split_data.h  data.csv  input.csv  logistic_regress_load_model_and_predict.cpp  logistic_regress_training_and_save.cpp  lr.xml  lr_model.xml  predictions.csv
mlpack_demo/3_knn/: knn_classifier.py  knn_regress.py  test_data.csv  test_regress.csv
mlpack_demo/4_kmeans_cluster/: README.md  kmeans_clustering.py  predict.csv  test_data.csv
mlpack_demo/5_decision_tree/: decision_tree_classifier.py  decision_tree_regress.py  iris.csv  random_forest_classifier.py
optimize/: .cproject  .project  CMakeLists.txt  stl_list_test.cpp  stopwatch_test.cpp  string_allocator_test.cpp  strings_test.cpp
optimize/impl/: priority_thread.cpp  stopwatch11.cpp  test_driver.cpp
optimize/include/: block_mgr.h  block_mgr.inl  kvstruct.h  priority_thread.h  stopwatch.h  stopwatch11.h  test_driver.h
poco_demo/01_foundation/10_timer/: CMakeLists.txt  timer.cpp
poco_demo/01_foundation/11_uri/: uri.cpp
poco_demo/01_foundation/12_base64_decode/: 1.txt  CMakeLists.txt  base64_decode.cpp
poco_demo/01_foundation/13_base64_encode/: CMakeLists.txt  base64_encode.cpp
poco_demo/01_foundation/14_deflate/: CMakeLists.txt  deflate.cpp
poco_demo/01_foundation/15_inflate/: CMakeLists.txt  inflate.cpp
poco_demo/01_foundation/16_dir/: CMakeLists.txt  dir.cpp
poco_demo/01_foundation/17_grep/: CMakeLists.txt  grep.cpp
poco_demo/01_foundation/18_hmac_md5/: CMakeLists.txt  hmac_md5.cpp
poco_demo/01_foundation/19_md5/: CMakeLists.txt  md5.cpp
poco_demo/01_foundation/1_activity_method/: activity_method.cpp
poco_demo/01_foundation/20_uuid_gen/: CMakeLists.txt  uuid_gen.cpp
poco_demo/01_foundation/2_activity/: CMakeLists.txt  activity.cpp
poco_demo/01_foundation/3_bin_read_writer/: CMakeLists.txt  bin_read_write.cpp
poco_demo/01_foundation/4_datetime/: CMakeLists.txt  conanfile.txt  datetime.cpp
poco_demo/01_foundation/5_line_ending_conv/: CMakeLists.txt  line_ending_conv.cpp
poco_demo/01_foundation/6_log_rotation/: CMakeLists.txt  log_rotation.cpp
poco_demo/01_foundation/7_logger/: CMakeLists.txt  logger.cpp
poco_demo/01_foundation/8_notification_queue/: CMakeLists.txt  notification_queue.cpp
poco_demo/01_foundation/9_string_tokens/: CMakeLists.txt  string_tokens.cpp
poco_demo/02_net/1_http_time_server/: CMakeLists.txt  conanfile.txt  http_time_server.cpp  http_time_server.properties  test.sh
poco_demo/03_data/1_mysql/: CMakeLists.txt  conanfile.txt  mysql_test.cpp
poco_demo/04_page_complier/1_date_time_page/: CMakeLists.txt  README.md  TimeHandler.cpp  date_time_p.cpp  date_time_p.cpsp
poco_demo/04_page_complier/2_page_for_loop/: CMakeLists.txt  StrLoopHandler.cpp  StrLoopHandler.h  str_loop_p.cpp  str_loop_p.cpsp
poco_demo/04_page_complier/3_obj_for_loop/: CMakeLists.txt  ObjLoopHandler.cpp  ObjLoopHandler.h  obj_loop_p.cpp  obj_loop_p.cpsp
poco_demo/05_active_rec/1_emp_and_role/: CMakeLists.txt  README.md  main.cpp  sample.xml
poco_demo/06_zip/1_zip/: CMakeLists.txt  main.cpp
poco_demo/07_xml/1_dom/: CMakeLists.txt  README.md  main.cpp
poco_demo/07_xml/2_sax/: 1.xml  CMakeLists.txt  README.md  main.cpp
poco_demo/07_xml/3_dom_writer/: CMakeLists.txt  main.cpp
qt_demo/10_splitter/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
qt_demo/11_dir/: CMakeLists.txt  main.cpp
qt_demo/12_file/: CMakeLists.txt  conanfile.txt  main.cpp
qt_demo/13_res_file/: CMakeLists.txt  file_res.qrc  main.cpp
qt_demo/14_qlabel/: CMakeLists.txt  dialog.cpp  dialog.ui
qt_demo/15_pushbutton/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
qt_demo/16_line_edit/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
qt_demo/17_checkbox/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
qt_demo/18_radio_btns/: CMakeLists.txt  dialog.cpp  dialog.ui
qt_demo/19_combobox/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
qt_demo/1_helloworld/: CMakeLists.txt  conanfile.txt  main.cpp
qt_demo/20_listwidget/: CMakeLists.txt  conanfile.txt  dialog.cpp  dialog.h  dialog.ui
qt_demo/2_close_dig/: CMakeLists.txt  closedig.cpp  closedig.h  closedig.ui  main.cpp
qt_demo/3_signals_and_slots/: CMakeLists.txt  window.cpp  window.ui
qt_demo/4_signals_and_slots_code/: CMakeLists.txt  window.cpp  window.h  window.ui
qt_demo/5_display_wins/: CMakeLists.txt  dialog.ui  main.cpp  window.cpp  window.h
qt_demo/6_display_wins_modaless/: CMakeLists.txt  dialog.cpp  window.cpp  window.h  window.ui
qt_demo/7_layout_tabs_buddies/: CMakeLists.txt  conanfile.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
qt_demo/8_h_and_v_layouts/: CMakeLists.txt  main.cpp
qt_demo/9_grid_layout/: CMakeLists.txt  main.cpp
sql_demo/: README.md
sql_demo/p2_mysql_basic_knowledge/: 1_database.md  2_table.md  3_datatypes.md  4_constraint.md  5_constraint_2.md  6_constraint_and_table_cp.md  7_course_select_system.md  8_dml_operation.md  table.md
sql_demo/p3_dml/: select_statement.md
template_cls/day01/01_typed/: typed.cpp
template_cls/day04/07_priority/: CMakeLists.txt  main.cpp
threads/04_multi_threads_and_data_shared/: CMakeLists.txt  README.md  main.cpp
threads/09_async_feature_and_promise/: README.md
(+115 files in other folders)
